test/valid/56311_while_loop_with_mutations/while_loop_with_mutations.agu
-- Author: tcomp56311, João Vedor

let countDown(n) : Int -> Unit =
    while n > 0 do (
        print(n);
        set n = n - 1
    )

let main(_) : Unit -> Unit =
    countDown(10)