test/invalid-syntax/64854_missing_separator/missing_separator.agu
-- Author: 64854, Diogo Almeida

let _ : Unit =
    -- missing the ;
    let a : Int = 1
    set a = a + 1